# vistadream

./: .gitignore  AGENTS.md  README.md  pyproject.toml
archive/: LATER_PLANS_2026-03-01T075013Z.md  WORKLOG_2026-03-01T075013Z.md  notes_2026-03-01T075013Z.md  task_plan_2026-03-01T075013Z.md
docs/: coarse_stage_guide.md  single_img_pipeline.md  spiral_trajectory_explained.md
openspec/changes/singleimg-colmap-mvs-refine/: design.md  proposal.md  tasks.md
openspec/changes/singleimg-colmap-mvs-refine/specs/colmap-mvs-depth/: spec.md
openspec/changes/singleimg-colmap-mvs-refine/specs/colmap-project-export/: spec.md
openspec/changes/singleimg-colmap-mvs-refine/specs/mvs-moge-depth-fusion/: spec.md
openspec/changes/singleimg-colmap-mvs-refine/specs/roma-v2-matching-import/: spec.md
openspec/changes/singleimg-colmap-mvs-refine/specs/singleimg-colmap-mvs-refine/: spec.md
src/vistadream/: rerun_setup.py
src/vistadream/api/: flux_outpainting.py  multi_image_pipeline.py  single_img_pipeline.py
src/vistadream/flux/: util.py
src/vistadream/ops/: flux.py
src/vistadream/ops/gs/: basic.py
tests/: test_coarse_frame_selection.py
